--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Pull in dev.to posts
-        uses: gautamkrishnar/blog-post-workflow@v1
+      - name: Pull in blog posts
+        uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://blog.sajayprakash.com/index.xml"
